k8s/homelab/apps/golink/resources/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: golink
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: golink
      app.kubernetes.io/name: golink
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 443
    # https://tailscale.com/kb/1082/firewall-ports
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 41641
          protocol: UDP
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 3478
          protocol: UDP
